--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,6 +15,8 @@
 
           <!-- LOGIN FORM -->
           <form action="/user/login" method="post">
+            
+            <input type="hidden" name="_csrf", value="<%= _csrf %>">
             <div class="form-group">
               <label>Email</label>
               <input type="text" class="form-control" name="email">
