--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -14,7 +14,8 @@
         <% } %>
 
           <!-- LOGIN FORM -->
-          <form action="/signup" method="post">
+          <form action="/user/signup" method="post">
+            <input type="hidden" name="_csrf", value="<%= _csrf %>">
             <div class="form-group">
               <label>Email</label>
               <input type="text" class="form-control" name="email">
@@ -30,7 +31,7 @@
           <hr>
 
           <p>Already have an account?
-            <a href="/login">Login</a>
+            <a href="/user/login">Login</a>
           </p>
           <p>Or go
             <a href="/">home</a>.</p>
